fix img jumpiness on some devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,7 +70,6 @@ button:not(:disabled) {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-attachment: scroll;
 }
 
 .content {
@@ -99,3 +98,8 @@ button:not(:disabled) {
   filter: blur(1rem);
 }
 
+@media (min-width: 992px) {
+  .banner {
+    background-attachment: scroll;
+  }
+}
